<resources>
    <string name="app_name">Home Tutor</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_in_google">Sign In with Google</string>
    <string name="welcome">Welcome</string>
    <string name="so_nice_to_see">So nice to see you</string>
    <string name="sign_up">Sign Up</string>
    <string name="developed_by">Developed By</string>
    <string name="ekra_bismika">﷽</string>
    <string name="ekra_bimika_bangla">পড় তোমার প্রভুর নামে, যিনি তোমাকে সৃষ্টি করেছেন</string>
    <string name="create_new_account">Create new account</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="pdf">Materials</string>
    <string name="other">Developer</string>
    <string name="department"><![CDATA[Bsc in Computer Science & Engineering]]></string>
    <string name="university">Daffodil International University</string>
    <string name="name">Md. Emrul Hasan Sifat</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Rate Us</string>
    <string name="suggestion">Give your valuable suggestion</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="graduated">Graduated From</string>
    <string name="qulification">Educational Qualification</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="about_u">Say some words about you</string>
    <string name="add_picture">Add Picture</string>
    <string name="enter">Enter</string>
    <string name="hint_name">Name</string>
    <string name="age">Age</string>
    <string name="Education">Education</string>
    <string name="Info">Info</string>
    <string name="bio">Bio</string>
    <string name="baout">About you</string>
</resources>